# fastapi-project-university

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
api/: handlers.py  models.py
db/: dals.py  models.py  session.py
tests/: conftest.py
