[tool.poetry]
name = "oxford-university"
version = "0.1.0"
description = ""
authors = ["dimoon <nazarovdima39@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.40"
envparse = "^0.2.0"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.11.3"}
alembic = "^1.15.2"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
